--- a/css/components/fixed-menu.scss
+++ b/css/components/fixed-menu.scss
@@ -6,40 +6,42 @@
     @include tablets{
         display: none;
     }
-}
-.fixed-menu__item{
-    margin-bottom:0.315rem;
-    &--active{
-    .fixed-menu__link{
-        opacity: 1;
-        border:0.063rem solid #E01F3D;
-         &:before{
-             opacity: 1;
-             background: #E01F3D;
-            
-         }
+
+    &__item{
+        margin-bottom:0.315rem;
+        &--active{
+            .fixed-menu__link{
+                opacity: 1;
+                border:0.063rem solid #E01F3D;
+                &:before{
+                    opacity: 1;
+                    background: #E01F3D;
+                    
+                }
+            }
+        }
     }
-}
-}
-.fixed-menu__link{
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-    border: 0.063rem solid transparent;
-    display: block;
-    position: relative;
-    opacity: 0.6;
-    &::before{
-        content:"";
-        opacity: 0.6;
-        background: #292929;
-        display: block;
-        width: 0.378rem;
-        height: 0.378rem;
+
+    &__link{
+        width: 1rem;
+        height: 1rem;
         border-radius: 50%;
-        position: absolute;
-        top:50%;
-        left:50%;
-        transform: translate(-50%,-50%);
+        border: 0.063rem solid transparent;
+        display: block;
+        position: relative;
+        opacity: 0.6;
+        &::before{
+            content:"";
+            opacity: 0.6;
+            background: #292929;
+            display: block;
+            width: 0.378rem;
+            height: 0.378rem;
+            border-radius: 50%;
+            position: absolute;
+            top:50%;
+            left:50%;
+            transform: translate(-50%,-50%);
+        }
     }
 }
