--- a/css/components/header.scss
+++ b/css/components/header.scss
@@ -4,19 +4,20 @@
     align-items: flex-start;
 }
 
-.logo__icon{
-    fill: #E01F3D;
-    width: 100%;
-    height: 100%;
-}
 .logo {
     width: rem(40px);
     height: rem(40px);
     flex-shrink: 0;
+
+    &__icon{
+        fill: #E01F3D;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .contacts.header__contacts{
-    
+
     @include tablets{
         display: none;
     }
