--- a/css/components/map.scss
+++ b/css/components/map.scss
@@ -9,11 +9,12 @@
     @include phones{
         height: 482px;
     }
-}
-.map__image{
-    display: block;
-    width: 100%;
-    height: 100%;
-    background: url("../img/map.svg") center center no-repeat;
-    background-size: cover;
+
+    &__image{
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: url("../img/map.svg") center center no-repeat;
+        background-size: cover;
+    }
 }
