--- a/css/components/why.scss
+++ b/css/components/why.scss
@@ -8,19 +8,18 @@
         justify-content: center;
         align-items: center;
     }
-}
 
-.main__title {
-    text-align: center;
-    margin-bottom: 1rem;
-}
-
-.why__subtitle {
-    color: $gray;
-    width: 55%;
-    text-align: center;
-    margin-bottom: 3.465rem;
-    @include tablets{
-        width: 80%;
+    &__subtitle {
+        color: $gray;
+        width: 55%;
+        text-align: center;
+        margin-bottom: 3.465rem;
+        @include tablets{
+            width: 80%;
+        }
+    }
+    &__main-title{
+        text-align: center;
+        margin-bottom: 1rem;
     }
 }
