--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,6 @@ img {
       -ms-flex-positive: 1;
           flex-grow: 1;
 }
-
 .hero__title {
   width: 35%;
   margin-bottom: 1.386rem;
@@ -172,7 +171,6 @@ img {
     margin-bottom: 0.87rem;
   }
 }
-
 .hero__subtitle {
   font-family: "Alegreya Sans";
   font-style: normal;
@@ -195,7 +193,6 @@ img {
     width: 65%;
   }
 }
-
 .hero__text-section {
   position: relative;
   width: 100%;
@@ -216,7 +213,6 @@ img {
     text-align: center;
   }
 }
-
 .hero__image {
   position: absolute;
   width: 31.374rem;
@@ -254,17 +250,16 @@ img {
           align-items: flex-start;
 }
 
-.logo__icon {
-  fill: #E01F3D;
-  width: 100%;
-  height: 100%;
-}
-
 .logo {
   width: 2.5rem;
   height: 2.5rem;
   -ms-flex-negative: 0;
       flex-shrink: 0;
+}
+.logo__icon {
+  fill: #E01F3D;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 768px) {
@@ -282,7 +277,6 @@ img {
     display: none;
   }
 }
-
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -293,7 +287,6 @@ img {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-
 .menu__item {
   display: inline-block;
   margin-right: 1.701rem;
@@ -307,26 +300,8 @@ img {
 .menu__item:last-child {
   margin-right: 0;
 }
-
 .menu__link {
   white-space: nowrap;
-}
-
-.pros__lits {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-}
-
-.pros__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-right: 1.386rem;
-}
-.pros__item:last-child {
-  margin-right: 0;
 }
 
 .pros {
@@ -337,18 +312,30 @@ img {
       -ms-flex-align: center;
           align-items: center;
 }
-
+.pros__lits {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+}
+.pros__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 1.386rem;
+}
+.pros__item:last-child {
+  margin-right: 0;
+}
 .pros__description {
   width: 6.3rem;
   line-height: 1.134rem;
 }
-
 .pros__image {
   margin-right: 1.134rem;
   width: 2.583rem;
   height: 2.583rem;
 }
-
 @media screen and (max-width: 768px) {
   .pros {
     display: none;
@@ -375,28 +362,18 @@ img {
   font-weight: 400;
   font-size: 1.134rem;
 }
-.contacts .contacts__phone {
+.contacts__phone {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   white-space: nowrap;
 }
-.contacts .contacts__image {
+.contacts__image {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   width: 1.008rem;
   margin-right: 0.378rem;
 }
-
-.header__contacts .contacts__phone {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.header__contacts .contacts__image {
-  height: 14px;
-}
-
 .contacts__image--red {
   width: 0.75rem;
   height: 0.75rem;
@@ -411,7 +388,6 @@ img {
     fill: black;
   }
 }
-
 @media screen and (max-width: 768px) {
   .contacts__phone--red {
     color: #E01F3D;
@@ -421,6 +397,15 @@ img {
   .contacts__phone--red {
     color: black;
   }
+}
+
+.header__contacts .contacts__phone {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header__contacts .contacts__image {
+  height: 14px;
 }
 
 .why {
@@ -442,12 +427,6 @@ img {
       -ms-flex-align: center;
           align-items: center;
 }
-
-.main__title {
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
 .why__subtitle {
   color: #666666;
   width: 55%;
@@ -458,6 +437,10 @@ img {
   .why__subtitle {
     width: 80%;
   }
+}
+.why__main-title {
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 .benifits__list {
@@ -616,6 +599,11 @@ img {
           justify-content: center;
   height: 100%;
 }
+.reviews__pager-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 
 .main__title--reviews {
   position: relative;
@@ -651,7 +639,6 @@ img {
     text-align: center;
   }
 }
-
 .review__content {
   -webkit-box-flex: 2;
       -ms-flex: 2;
@@ -669,6 +656,64 @@ img {
   .review__content {
     padding: 0;
   }
+}
+.review__title {
+  font-weight: 700;
+  font-size: 1.512rem;
+  line-height: 1.764rem;
+  margin-bottom: 1.89rem;
+}
+@media screen and (max-width: 768px) {
+  .review__title {
+    margin-bottom: 0;
+  }
+}
+.review__content-text {
+  max-width: 100%;
+  color: #666666;
+  margin-bottom: 2.394rem;
+}
+@media screen and (max-width: 768px) {
+  .review__content-text {
+    padding: 1rem 1.5rem;
+    margin-bottom: 0;
+  }
+}
+.review__username {
+  font-weight: 700;
+  font-size: 1.134rem;
+  line-height: 1.323rem;
+}
+@media screen and (max-width: 768px) {
+  .review__username {
+    margin-bottom: 1.875rem;
+    font-family: "Play";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+  }
+}
+.review__pager-item {
+  margin-right: 0.441rem;
+}
+.review__pager-item:last-child {
+  margin-right: 0;
+}
+.review__pager-image {
+  height: 4.662rem;
+  width: 4.662rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+@media screen and (max-width: 480px) {
+  .review__pager-image {
+    height: 4rem;
+    width: 4rem;
+  }
+}
+.review__pager-item--active .review__pager-image {
+  border: 0.252rem solid #E01F3D;
 }
 
 .avatar {
@@ -704,76 +749,6 @@ img {
   }
 }
 
-.review__title {
-  font-weight: 700;
-  font-size: 1.512rem;
-  line-height: 1.764rem;
-  margin-bottom: 1.89rem;
-}
-@media screen and (max-width: 768px) {
-  .review__title {
-    margin-bottom: 0;
-  }
-}
-
-.review__content-text {
-  max-width: 100%;
-  color: #666666;
-  margin-bottom: 2.394rem;
-}
-@media screen and (max-width: 768px) {
-  .review__content-text {
-    padding: 1rem 1.5rem;
-    margin-bottom: 0;
-  }
-}
-
-.review__username {
-  font-weight: 700;
-  font-size: 1.134rem;
-  line-height: 1.323rem;
-}
-@media screen and (max-width: 768px) {
-  .review__username {
-    margin-bottom: 1.875rem;
-    font-family: "Play";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.125rem;
-    line-height: 1.5rem;
-  }
-}
-
-.reviews__pager-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.review__pager-item {
-  margin-right: 0.441rem;
-}
-.review__pager-item:last-child {
-  margin-right: 0;
-}
-
-.review__pager-image {
-  height: 4.662rem;
-  width: 4.662rem;
-  border-radius: 50%;
-  overflow: hidden;
-}
-@media screen and (max-width: 480px) {
-  .review__pager-image {
-    height: 4rem;
-    width: 4rem;
-  }
-}
-
-.review__pager-item--active .review__pager-image {
-  border: 0.252rem solid #E01F3D;
-}
-
 .delivery {
   background: url(.././img/bg.png) bottom no-repeat, #161616;
   background-size: 80%;
@@ -798,14 +773,13 @@ img {
     padding: 0;
   }
 }
-
-.main__title--delivery {
+.delivery__main-title {
   margin-bottom: 3.843rem;
   text-align: center;
   color: #FFFFFF;
 }
 @media screen and (max-width: 768px) {
-  .main__title--delivery {
+  .delivery__main-title {
     margin-bottom: 2rem;
   }
 }
@@ -817,14 +791,12 @@ img {
   justify-items: center;
   padding: 0 0.3125rem 0 0.3125rem;
 }
-
 .form__column {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
   width: 50%;
 }
-
 .form__row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -832,13 +804,11 @@ img {
   margin-bottom: 0.875rem;
   width: 100%;
 }
-
 .form__btns {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
 .form__input {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -855,44 +825,34 @@ img {
   outline: none;
   border: 0.1875rem solid #E01F3D;
 }
-
 .form__column:nth-child(2) > .form__item {
   width: 98%;
 }
-
 .form__row:nth-child(1) > .form__item {
   width: 50%;
 }
-
 .form__row:nth-child(2) > .form__item {
   width: 99.5%;
 }
-
 .form__row:nth-child(3) > .form__item {
   width: 25%;
 }
-
 .form__input--normal {
   width: 95%;
 }
-
 .form__item__label {
   margin-bottom: 0.375rem;
 }
-
 .form__item:nth-child(2) > .form__input--normal {
   margin-right: 0;
 }
-
 .form__item:nth-child(4) > .form__input--short {
   margin-right: 0;
 }
-
 .form__input--long {
   margin-right: 0;
   width: 98%;
 }
-
 .form__input--short {
   margin-right: 0.75rem;
   width: 90%;
@@ -900,56 +860,15 @@ img {
 .form__input--short:nth-child(4) {
   margin-right: 0;
 }
-
 .form__input--textarea {
   width: 100%;
   height: 9.875rem;
   margin-bottom: 2.25rem;
   margin-right: 0;
 }
-
 .form__column {
   margin-right: 1.625rem;
 }
-
-.controls__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 1rem;
-}
-
-.controls {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-bottom: 2.75rem;
-}
-
-.controls__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-right: 1.5rem;
-}
-
-.controls__radio {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-}
-.controls__radio:checked + .form__item__label--radio::before {
-  outline: none;
-  background: #E01F3D;
-  border: 0.375rem solid #ffffff;
-  width: 0.8125rem;
-  height: 0.8125rem;
-}
-
 .form__item__label--radio {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -979,16 +898,6 @@ img {
   background-position: center center;
   background-size: 50% 50%;
 }
-
-.controls__checkbox {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-}
-.controls__checkbox:checked + .form__item__label--checkbox::before {
-  background: url(../img/checkmark.svg) center no-repeat, #ffffff;
-}
-
 .form__item__label--checkbox {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -1018,9 +927,51 @@ img {
   background-position: center center;
   background-size: 50% 50%;
 }
-
 .form__btn--fat {
   padding: 1.25rem 2.5rem;
+}
+
+.controls .controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 2.75rem;
+}
+.controls .controls__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1rem;
+}
+.controls .controls__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 1.5rem;
+}
+.controls .controls__radio {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+.controls .controls__radio:checked + .form__item__label--radio::before {
+  outline: none;
+  background: #E01F3D;
+  border: 0.375rem solid #ffffff;
+  width: 0.8125rem;
+  height: 0.8125rem;
+}
+.controls .controls__checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+.controls .controls__checkbox:checked + .form__item__label--checkbox::before {
+  background: url(../img/checkmark.svg) center no-repeat, #ffffff;
 }
 
 .btn--color--transparent {
@@ -1112,7 +1063,6 @@ img {
     display: none;
   }
 }
-
 .fixed-menu__item {
   margin-bottom: 0.315rem;
 }
@@ -1124,7 +1074,6 @@ img {
   opacity: 1;
   background: #E01F3D;
 }
-
 .fixed-menu__link {
   width: 1rem;
   height: 1rem;
@@ -1168,7 +1117,6 @@ img {
     display: inline-flex;
   }
 }
-
 .hamburger__plank {
   display: block;
   background: #292929;
@@ -1186,7 +1134,18 @@ img {
           flex-direction: column;
   justify-items: center;
 }
-
+.footer__address {
+  font-family: "Play";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.3125rem;
+  line-height: 1.5rem;
+}
+@media screen and (max-width: 480px) {
+  .footer__address {
+    margin-bottom: 0.75rem;
+  }
+}
 .footer .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1209,34 +1168,21 @@ img {
   }
 }
 @media screen and (max-width: 480px) {
-  .footer .container .footer__contacts {
+  .footer .container__contacts {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
 }
-.footer .container .footer__contacts .contacts {
+.footer .container__contacts .contacts {
   padding: 0;
   margin-bottom: 1.1875rem;
 }
-.footer .container .footer__contacts .contacts .contacts__phone {
+.footer .container__contacts .contacts__phone {
   padding: 0;
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
-}
-
-.footer__address {
-  font-family: "Play";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.3125rem;
-  line-height: 1.5rem;
-}
-@media screen and (max-width: 480px) {
-  .footer__address {
-    margin-bottom: 0.75rem;
-  }
 }
 
 .socials__item {
@@ -1323,7 +1269,6 @@ img {
     height: 482px;
   }
 }
-
 .map__image {
   display: block;
   width: 100%;
