--- a/css/main.scss
+++ b/css/main.scss
@@ -38,3 +38,5 @@ $gray:#666666;
 @import "components/socials";
 @import "components/info";
 @import "components/map";
+@import "components/shop";
+@import "components/fullscreen-menu.scss";
