--- a/css/components/menu.scss
+++ b/css/components/menu.scss
@@ -29,4 +29,31 @@
     &__link{
         white-space: nowrap;
     }
+
+    &-vertical{
+
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        width: 100%;
+        height: 100%;
+
+
+
+        .menu__list{
+            flex-direction: column;
+            color: #fff;
+            text-align: center;
+        }
+        .menu__item{
+            display: flex;
+            flex-direction: column;
+            width: rem(300px);
+            font-family: 'Play';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 36px;
+            line-height: 72px;
+        }
+    }
 }
