--- a/css/main.css
+++ b/css/main.css
@@ -1326,6 +1326,7 @@ img {
   display: -ms-flexbox;
   display: flex;
   max-width: 1030px;
+  width: 100%;
 }
 .shop__content {
   display: -webkit-box;
@@ -1336,6 +1337,14 @@ img {
           align-items: center;
   padding: 4.125rem 0;
 }
+@media screen and (max-width: 768px) {
+  .shop__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 .shop__desc {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1344,6 +1353,39 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 100%;
+}
+@media screen and (max-width: 768px) {
+  .shop__desc {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .shop__desc-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .shop__features-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .shop__func {
   display: -webkit-box;
@@ -1369,6 +1411,11 @@ img {
       flex-shrink: 0;
   fill: #fff;
 }
+@media screen and (max-width: 768px) {
+  .shop__func {
+    display: none;
+  }
+}
 .shop__pager {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1384,11 +1431,29 @@ img {
 .shop__pager--left {
   margin-right: 2.0625rem;
 }
+@media screen and (max-width: 768px) {
+  .shop__pager--left {
+    position: relative;
+    right: 75%;
+  }
+}
 .shop__pager--right {
   position: relative;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
   margin-right: 2.0625rem;
+}
+@media screen and (max-width: 768px) {
+  .shop__pager--right {
+    position: relative;
+    left: 71%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .shop__pager {
+    position: absolute;
+    top: 13.75rem;
+  }
 }
 .shop__pager-img {
   fill: #000;
@@ -1399,6 +1464,12 @@ img {
   font-size: 2.25rem;
   line-height: 2.625rem;
   margin-bottom: 1.5rem;
+}
+@media screen and (max-width: 768px) {
+  .shop__title {
+    font-size: 28px;
+    line-height: 32px;
+  }
 }
 .shop__text {
   color: #666666;
@@ -1415,6 +1486,14 @@ img {
   background: url("../../img/shop_headphones.png") left 2.5rem top 3.75rem no-repeat, #FFFFFF;
   background-size: 80%;
   margin-right: 3.75rem;
+}
+@media screen and (max-width: 768px) {
+  .shop__main-image {
+    background-position: 30px;
+    width: 19.125rem;
+    height: 19.125rem;
+    margin-bottom: 3.125rem;
+  }
 }
 .shop__buy {
   display: -webkit-box;
@@ -1433,6 +1512,11 @@ img {
   line-height: 3.75rem;
   margin-right: 0.9375rem;
 }
+@media screen and (max-width: 768px) {
+  .shop__price {
+    margin-right: 1.875rem;
+  }
+}
 
 .feature {
   display: -webkit-box;
@@ -1447,6 +1531,13 @@ img {
 }
 .feature__item {
   margin-right: 5.625rem;
+}
+@media screen and (max-width: 768px) {
+  .feature__item {
+    text-align: start;
+    margin-left: 1.875rem;
+    margin-right: 3.125rem;
+  }
 }
 .feature__text {
   font-family: "Play";
