--- a/css/main.scss
+++ b/css/main.scss
@@ -40,3 +40,4 @@ $gray:#666666;
 @import "components/map";
 @import "components/shop";
 @import "components/fullscreen-menu.scss";
+@import "components/specs";
