--- a/css/components/btn.scss
+++ b/css/components/btn.scss
@@ -1,8 +1,9 @@
 .btn {
     display: inline-block;
+    text-align: center;
     background: #E01F3D;
     color: #ffffff;
-    padding: 16px 41px;
+    padding: 18px 41px;
     border-radius: 100px;
     font-weight: 700;
     text-decoration: none;
