Правки от наставника

--- a/css/components/shop.scss
+++ b/css/components/shop.scss
@@ -154,7 +154,7 @@
         height: rem(452px);
     
         border-radius: 50%;
-        background: url('../../img/shop_headphones.png')left rem(40px) top rem(60px) no-repeat, #FFFFFF;
+        background: url('../img/shop_headphones.png')left rem(40px) top rem(60px) no-repeat, #FFFFFF;
         background-size: 80%;
         margin-right: rem(60px);
         @include tablets{
